# FiloJ

./: LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py  pyproject.toml  utils.py
auth_service/: main.py  pyproject.toml
auth_service/core/: exceptions.py
auth_service/grpc/: grpc_server.py  grpc_servicer.py
auth_service/models/: auth.py
auth_service/routes/: api_keys.py  auth.py
auth_service/schemas/: api_key.py  auth.py
auth_service/services/: auth.py
auth_service/utils/: auth.py
clamav/: clamd.conf
database/migrations/: env.py
database/migrations/versions/: 2336ec9187ba_fix_add_display_prefix_to_api_keys_table.py  6d1bea7deb10_add_auth_tables.py  9d3873bc1d17_fix_add_developer_id_field_to_file_.py  a39de233849c_remove_job_type_from_job_table.py  a6b87301a528_initial_tables.py  b805d204858c_fix_add_timezone_for_expire_at_column_.py  cee1f417cf4e_remove_nullability_constrain_from_jobs_.py  dd729cbc8351_fix_nullable_upload_id_in_jobs_table.py  (+1 more)
gateway/: main.py  pyproject.toml
gateway/core/: config.py  security.py
gateway/grpc_clients/: grpc_client.py
gateway/routers/: proxy.py
gateway/utils/: headers.py
image_processor/: pyproject.toml  worker.py
logger_service/: pyproject.toml  worker.py
security-scanner/: pyproject.toml  worker.py
security_scanner/: clamav.py  pyproject.toml  worker.py
shared/: pyproject.toml
shared/src/shared/: broker.py  config.py  database.py  logger.py  models.py  storage.py
shared/src/shared/protos/: auth.proto
