[project]
name = "dunno-what"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "api",
    "security_scanner",
    "logger_service",
    "image_processor",
    "shared",
    "auth_service",
    "gateway"
]